--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Tutors</string>
     <string name="btnSearchValue">Поиск репетитора</string>
+    <string name="btnToLessonPage">Мои Уроки</string>
+    <string name="btnSaveLessonChanges">Сохранить</string>
 </resources>
