--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Tutors</string>
     <string name="btnSearchValue">Поиск репетитора</string>
+    <string name="Lastname">Фамилия</string>
+    <string name="Subjects">Предметы</string>
+    <string name="DescriptionProfile">Описание</string>
+    <string name="phoneNumber">Номер телефона</string>
+    <string name="SaveProfile">Сохранить</string>
+    <string name="firstname">Имя</string>
+    <string name="avatar">Avatar</string>
 </resources>
